[gd_scene load_steps=31 format=3 uid="uid://gwt73yfk8k78"]

[ext_resource type="Script" uid="uid://chbjnk1plxn7y" path="res://Controllers/Bombs/wave_bomb.gd" id="1_kc201"]
[ext_resource type="Texture2D" uid="uid://ca83n70v8prhp" path="res://Imports/Super Package Retro Pixel Effects 32x32 pack 2 Free/16.png" id="2_gj3b4"]
[ext_resource type="Texture2D" uid="uid://5aoqt0w42d1a" path="res://Resources/Art/Wave Bomb.png" id="3_61h8f"]
[ext_resource type="Texture2D" uid="uid://cbf32jxmcl0da" path="res://Imports/Super Package Retro Pixel Effects 32x32 pack 2 Free/20.png" id="5_mcfqu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_61h8f"]
atlas = ExtResource("2_gj3b4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jry8b"]
atlas = ExtResource("2_gj3b4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_thh67"]
atlas = ExtResource("2_gj3b4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcfqu"]
atlas = ExtResource("2_gj3b4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdabj"]
atlas = ExtResource("2_gj3b4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwk5d"]
atlas = ExtResource("2_gj3b4")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps3gc"]
atlas = ExtResource("2_gj3b4")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jh5a4"]
atlas = ExtResource("2_gj3b4")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kaw8o"]
atlas = ExtResource("2_gj3b4")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2y32"]
atlas = ExtResource("2_gj3b4")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5uhv"]
atlas = ExtResource("2_gj3b4")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjjx"]
atlas = ExtResource("2_gj3b4")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hktpu"]
atlas = ExtResource("5_mcfqu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t68id"]
atlas = ExtResource("5_mcfqu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbwjr"]
atlas = ExtResource("5_mcfqu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p0ak"]
atlas = ExtResource("5_mcfqu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dc2v"]
atlas = ExtResource("5_mcfqu")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk8x3"]
atlas = ExtResource("5_mcfqu")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rustx"]
atlas = ExtResource("5_mcfqu")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lmst"]
atlas = ExtResource("5_mcfqu")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttynu"]
atlas = ExtResource("5_mcfqu")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yba3"]
atlas = ExtResource("5_mcfqu")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qa8hn"]
atlas = ExtResource("5_mcfqu")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsv0r"]
atlas = ExtResource("5_mcfqu")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_uu6pi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61h8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jry8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thh67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcfqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdabj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwk5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps3gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jh5a4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kaw8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2y32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5uhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjjx")
}],
"loop": false,
"name": &"explosion",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hktpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t68id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbwjr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p0ak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dc2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk8x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rustx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lmst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttynu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yba3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qa8hn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsv0r")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"idle",
"speed": 20.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_61h8f"]
radius = 103.01942

[node name="WAVE_Bomb" type="Node2D"]
top_level = true
script = ExtResource("1_kc201")
EXPLOSION_FORCE = 700

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("3_61h8f")

[node name="Effect" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_uu6pi")
animation = &"idle"
frame = 12

[node name="ExplosionRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ExplosionRadius"]
shape = SubResource("CircleShape2D_61h8f")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="animation_finished" from="Effect" to="." method="_on_effect_animation_finished"]
[connection signal="body_entered" from="ExplosionRadius" to="." method="_on_explosion_radius_body_entered"]
[connection signal="body_exited" from="ExplosionRadius" to="." method="_on_explosion_radius_body_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
